[package]
name = "iam_platform"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
bcrypt = "0.19.2"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "uuid", "chrono", "ipnetwork"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["serde"] }
